# tinycheck

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  cabal_check.sh  flake.nix  fourmolu.yaml  tinycheck.cabal
.github/workflows/: ci.yaml
bench/: Main.hs
examples/: Colour.hs  Tree.hs
src/Data/: TestCases.hs
src/Test/Tasty/: TinyCheck.hs
test/: Main.hs
test/Test/: Base.hs  Combinators.hs  Generic.hs  HybridSort.hs  Strings.hs
